# python-gphoto2

./: .gitignore  .travis.yml  CHANGELOG.txt  INSTALL.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  wait_for_event_and_download
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos.yml  build-manylinux.yml  build-wheels.yml  lint_python.yml
developer/: Doxyfile  README.rst  README.txt  build_doc.py  build_swig.py  compare_versions.py  tag_release.py
examples/: README.rst  cam-conf-view-gui.py  camera-config-gui-classes.py  camera-config-gui-oo.py  camera-config-gui.py  camera-summary-classes.py  camera-summary-oo.py  camera-summary.py  capture-image.py  choose-camera.py  clear-space.py  context_with_callbacks.py  copy-chunks.py  copy-data.py  copy-files.py  error_handling.py  focus-gui.py  get-camera-clock.py  get-capture-target.py  gphoto2_version.py  list-cameras-classes.py  list-cameras-oo.py  list-cameras.py  list-files-classes.py  list-files-oo.py  list-files.py  log_events.py  preview-image.py  read-exif-exifread.py  read-exif-gexiv2.py  read-exif.py  requirements.txt  set-camera-clock.py  set-capture-target.py  time_lapse.py  wait-for-event-oo.py  wait-for-event.py
gphoto2/: __init__.py  gphoto2.i  gphoto2_abilities_list.i  gphoto2_camera.i  gphoto2_context.i  gphoto2_file.i  gphoto2_filesys.i  gphoto2_list.i  gphoto2_port.i  gphoto2_port_info_list.i  gphoto2_port_log.i  gphoto2_result.i
source/: __init__.py  gphoto2_abilities_list.i  gphoto2_port_info_list.i
source/lib/: __init__.py  gphoto2_abilities_list.i  gphoto2_camera.i  gphoto2_context.i  gphoto2_file.i  gphoto2_filesys.i  gphoto2_list.i  gphoto2_port.i  gphoto2_port_info_list.i  gphoto2_port_log.i  gphoto2_version.i  gphoto2_widget.i
src/: macros.i
src/gphoto2/: __init__.py  __main__.py  abilities_list.i  camera.i  context.i  error.py  file.i  filesys.i  gphoto2_abilities_list.i  gphoto2_camera.i  gphoto2_context.i  gphoto2_file.i  gphoto2_filesys.i  gphoto2_list.i  (+15 more)
tests/: README.rst  test_abilities_list.py  test_camera.py  test_context.py  test_file.py  test_filesys.py  test_list.py  test_no_camera.py  test_port.py  test_port_info_list.py  test_port_log.py  test_result.py  test_version.py  test_virtual_camera.py  test_widget.py  vcamera.py
(+94 files in other folders)
