# python-gphoto2 - Python interface to libgphoto2
# http://github.com/jim-easterbrook/python-gphoto2
# Copyright (C) 2023  Jim Easterbrook  jim@jim-easterbrook.me.uk
#
# This file is part of python-gphoto2.
#
# python-gphoto2 is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# python-gphoto2 is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with python-gphoto2.  If not, see
# <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools >= 59.6", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "gphoto2"
description = "Python interface to libgphoto2"
readme = "README.rst"
license = {text = "GNU LGPL"}
authors = [{name = "Jim Easterbrook", email = "jim@jim-easterbrook.me.uk"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/jim-easterbrook/python-gphoto2"
documentation = "http://www.gphoto.org/doc/api/"
repository = "https://github.com/jim-easterbrook/python-gphoto2"
changelog = "https://github.com/jim-easterbrook/python-gphoto2/blob/main/CHANGELOG.txt"

[tool.setuptools]
platforms = ["POSIX", "MacOS"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "gphoto2.__version__"}
